--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build&Deploy
+name: Deploy App
 on:
     push:
         branches:
@@ -7,7 +7,15 @@ jobs:
     build:
         runs-on: ubuntu-latest
         steps:
-            - name: Checkout
-              uses: actions/checkout@v2
-            - name: Test
-              run: ls -a
+          - name: Deploy NodeJS app
+            uses: appleboy/ssh-action@v1.0.0
+            with:
+                host: ${{ secrets.SERVER_IP }}
+                username: azureuser
+                key: ${{ secrets.SSH_PRIVATE_KEY }}
+                script_stop: true
+                script: |
+                    cd ~/apps/ws/userfetch-mongo/
+                    git pull
+                    npm install
+                    pm2 restart bin/www
