--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,5 +17,7 @@ jobs:
                 script: |
                     cd ~/apps/ws/userfetch-mongo/
                     git pull
+                    export NVM_DIR=~/.nvm
+                    source ~/.nvm/nvm.sh
                     npm install
                     pm2 restart bin/www
